--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-html-parser": "^2.0.2",
     "react-redux": "^7.2.3",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3"
   },
   "scripts": {
@@ -19,7 +21,6 @@
     "test": "craco test",
     "eject": "react-scripts eject",
     "react-start": "react-scripts start"
-
   },
   "eslintConfig": {
     "extends": "react-app"
