--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-html-parser": "^2.0.2",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.1",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "redux-saga": "^1.1.3"
   },
   "scripts": {
     "start": "craco start",
